# edulift

./: .gitignore  LICENSE  Makefile  README.md  cookiecutter.json  pyproject.toml  requirements.txt
config/: constraints.yaml
data/: README.md
data/processed/: eVED_171101_week_clean.csv  eVED_171101_week_matched.csv  eVED_features.csv  gps_traces_clean.csv
data/processed/T7/splits/: test.csv  train.csv
data/raw/gps_traces/: .gitignore  eVED_171101_week.csv  taxi_data_subset.csv.dvc
data/raw/ride_logs/: .gitignore  uber-rides-dataset.csv  uber-rides-dataset.csv.dvc
data/raw/student_schedules/: .gitignore  student_timetable.csv  student_timetable.csv.dvc
data/splits/: eval_config.json  val.csv
docs/: mkdocs.yml
docs/docs/: constraints.md  index.md
edulift_data_repo/: test.py  validate_data.py
notebooks/: T3_GPS_traces_Cleaning.ipynb  T4_GPS_traces_matching.ipynb  T5.ipynb  T6.ipynb  T7.ipynb  gps_traces_cleaning.ipynb
reports/figures/t6/: peak_duration_buckets.csv  summary.json  top_routes.csv  top_routes_labeled.csv
